Fixing project language wrapping and mobile sidebar links

--- a/components/Project/Project.module.css
+++ b/components/Project/Project.module.css
@@ -35,6 +35,8 @@
     color: #64ffda;
     font-size: 12px;
     padding: 15px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .Language {
