--- a/components/Sidebar/Sidebar.module.css
+++ b/components/Sidebar/Sidebar.module.css
@@ -19,10 +19,15 @@
 }
 
 .Item {
-    color: #ccd6f6;
     font-family: 'SFMono-Regular';
     padding: 20px 0px;
 }
+
+.Item span a {
+    color: #ccd6f6;
+	text-decoration: none;
+}
+
 
 .Item:hover {
     color: #64ffda;
